# mensaplan

./: Mensaplan.cabal  Mensaplan.hs  README.md
